# truffleyard

./: .gitignore  Cargo.toml  README.md  todo.md
common/: Cargo.toml
common/src/: lib.rs
lists/: vidpid.json
parser/: Cargo.toml
parser/src/: main.rs  parser.rs
src/: errors.rs  eventlogs.rs  main.rs  registry.rs
src/account_usage/: eventlogs_only.rs  mod.rs  registry_only.rs
src/account_usage/eventlogs/: authentication_events.rs  mod.rs  rdp_usage.rs  service_events.rs  succ_faillogons.rs
src/account_usage/registry/: cloud_account_details.rs  last_login_password_change.rs  mod.rs  user_accounts.rs
src/application_execution/registry/: shimcache.rs
src/eventlogs/: errors.rs  mod.rs
src/eventlogs/account_usage/: authentication_events.rs  mod.rs  rdp_usage.rs  service_events.rs  succ_faillogons.rs
src/external_device_usb_usage/: mod.rs  registry_only.rs
src/external_device_usb_usage/registry/: sof_volinfcache.rs  sof_volname.rs  sys_hid.rs  sys_mounteddev.rs  sys_scsi.rs  sys_usb.rs  sys_usbstor.rs
src/registry/: mod.rs
src/registry/external_devices/: mod.rs  sof_volname.rs  sys_hid.rs  sys_mounteddev.rs  sys_scsi.rs  sys_usb.rs  sys_usbstor.rs
src/registry/system_information/: computer_name.rs  current_version.rs  system_last_shutdown_time.rs
src/system_information/: mod.rs  registry_only.rs
src/system_information/registry/: computer_name.rs  current_version.rs  mod.rs  operating_system_version.rs  system_last_shutdown_time.rs
