[workspace]
members = [
    ".",
    "./parser",
    "nt-hive"
]

[package]
name = "truffleyard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { version = "~4", features = ["derive"] }
serde = { version = "~1", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
csv = "~1"
common = { version = "0.1.0", path = "./common" }
nt-hive = { version = "~0.3", path = "nt-hive" }
chrono = { version = ">=0.4.23", default-features = false, features = ["serde"] }
serde-jsonlines = "~0.4"
regex = "~1"
once_cell = "~1"
encoding_rs = "~0.8"
evtx = "~0.8"
serde-xml-rs = "~0.6"
xmltojson = "~0.1"
log = "~0.4"
env_logger = "~0.10"
rayon = "~1"