[workspace]
members = [
    ".",
    "./parser",
]

[package]
name = "truffleyard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# own libraries
common = { version = "0.1.0", path = "./common" }

# hive (forked from https://github.com/ColinFinck/nt-hive, made some minor adjustments to fit this project)
nt-hive = { version = "*", git = "https://github.com/sn00m4n/nthive", branch = "test" }

# xml to json library (forked from https://github.com/rtyler/xmltojson, added Errors for Error Handling)
xmltojson = { version = "*", git = "https://github.com/sn00m4n/xml2json", branch = "test" }


# clap
clap = { version = "~4", features = ["derive"] }


# serde
serde-xml-rs = "~0.6"
serde-jsonlines = "~0.4"
serde = { version = "~1", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }

# time library
chrono = { version = ">=0.4.23", default-features = false, features = ["serde"] }

# evtx parser
evtx = "~0.8"

# regex
regex = "~1"

# error handling
anyhow = "~1"

# (regex lazy) compiles regex only one time for faster program
once_cell = "~1"

# windows encoding utf16le
encoding_rs = "~0.8"


# logging facade
log = "~0.4"
# macht eigentliches logging
env_logger = "~0.10"

