[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "~1", features = ["derive"] }
chrono = { version = ">=0.4.23", default-features = false, features = ["serde"] }
encoding_rs = "~0.8"
evtx = "~0.8"
serde_json = { version = "1.0", features = ["raw_value"] }