[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "~1"
once_cell = "~1"
anyhow = "~1"
log = "~0.4"
env_logger = "~0.10"
serde = { version = "~1", features = ["derive"] }
serde_json = "~1"
clap = { version = "~4", features = ["derive"] }
common = { version = "0.1.0", path = "../common" }